Java 8 adaptation